<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodScreen">

    <TextView
        android:id="@+id/DetailTitleFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WelcomeScreen"
        android:textColor="#304FFE"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <LinearLayout
            android:id="@+id/food_name_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/food_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name_label"
                android:textColor="#304FFE"
                android:textSize="@dimen/textsize22"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/food_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food_name"
                android:textColor="#304FFE"
                android:textSize="@dimen/textsize18"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/food_origin_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/food_origin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_origin_label"
                android:textColor="#304FFE"
                android:textSize="@dimen/textsize22"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/food_origin_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food_origin"
                android:textColor="#304FFE"
                android:textSize="@dimen/textsize18"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/food_price_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/food_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_cost_label"
                android:textColor="#304FFE"
                android:textSize="@dimen/textsize14"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/food_price_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food_avg_cost_france"
                android:textColor="#304FFE"
                android:textSize="@dimen/textsize18"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/foodpicture"
        android:layout_width="@dimen/screen_imagedimension"
        android:layout_height="@dimen/screen_imagedimension"
        android:background="@drawable/tiramisu"
        android:contentDescription="@string/foodimg_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="@dimen/btnwidth"
        android:layout_height="wrap_content"
        android:text="@string/backbtn"
        android:textSize="@dimen/textsize18"
        android:textColor="@color/black"
        android:backgroundTint="#FFAB00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodpicture" />

</androidx.constraintlayout.widget.ConstraintLayout>